<resources>
    <string name="app_name">Vacancy\'s app</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="team">Команда</string>
    <string name="enter_a_request">Введите запрос</string>
    <string name="entry_region">Введите регион</string>
    <string name="entry_branch">Введите отрасль</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="there_is_no_internet_connection">Нет интернета</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="no_such_branches">Таких отраслей нет</string>
    <string name="failed_to_get_a_list_of_vacancies">Не удалось получить список вакансий</string>
    <string name="couldnt_get_list">Не удалось получить\nсписок</string>
    <string name="empty_list">Список пуст</string>
    <string name="vacancy_not_found_or_deleted">Вакансия не найдена или удалена</string>
    <string name="found">Найдено %1$s</string>
    <string name="the_vacancy">Вакансия</string>
    <string name="place_of_work">Место работы</string>
    <string name="branch">Отрасль</string>
    <string name="select">Выбрать</string>
    <string name="apply">Применить</string>
    <string name="drop">Сбросить</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_the_amount">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="filtering_settings">Настройка фильтрации</string>
    <string name="choosing_a_place_of_work">Выбор места работы</string>
    <string name="country_choose">Выбор страны</string>
    <string name="region_choose">Выбор региона</string>
    <string name="select_branch">Выбор отрасли</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="russia">Россия</string>
    <string name="ukraine">Украина</string>
    <string name="kazakhstan">Казахстан</string>
    <string name="azerbaijan">Азербайджан</string>
    <string name="belarus">Беларусь</string>
    <string name="georgia">Грузия</string>
    <string name="kyrgyzstan">Кыргыстан</string>
    <string name="uzbekistan">Узбекистан</string>
    <string name="other_regions">Другие регионы</string>
    <string name="region_is_not_found">Такого региона нет</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="duties">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="core_skills">Ключевые навыки</string>
    <string name="conditions">Условия</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="currency">%1$s</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="creators">Над приложением работали</string>
    <string name="gorpishin">Евгений Горпишин</string>
    <string name="ignatova">Наталья Игнатова</string>
    <string name="akhabanin">Дмитрий Ахабанин</string>
    <string name="yakovleva">Марина Яковлева</string>
    <string name="makarov">Алексей Макаров</string>
    <string name="usd">$</string>
    <string name="eur">€</string>
    <string name="rub">₽</string>
    <string name="azn">₼</string>
    <string name="byr">br</string>
    <string name="gel">₾</string>
    <string name="kgs">с</string>
    <string name="kzt">₸</string>
    <string name="uah">₴</string>
    <string name="uzs">so\'m</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="binding_not_initialized">Binding wasn\'t initialized</string>
    <string name="vacancy_name_area">%1$s, %2$s</string>
    <string name="point">•</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="server_mistake">Произошла ошибка</string>

    <plurals name="vacancies_count">
        <item quantity="zero">%d вакансий</item>
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d вакансий</item>
    </plurals>

</resources>
