<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/team"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.team.TeamFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp_16" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/team"
        app:titleTextAppearance="@style/appearance_medium_22" />

    <TextView
        android:id="@+id/creators"
        style="@style/appearance_bold_32"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_8"
        android:text="@string/creators"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/toolbarTeam" />

    <TextView
        android:id="@+id/creator1"
        style="@style/appearance_medium_16"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/gorpishin"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/creators" />

    <TextView
        android:id="@+id/creator2"
        style="@style/appearance_medium_16"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/ignatova"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/creator1" />

    <TextView
        android:id="@+id/creator3"
        style="@style/appearance_medium_16"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/akhabanin"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/creator2" />

    <TextView
        android:id="@+id/creator4"
        style="@style/appearance_medium_16"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/yakovleva"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/creator3" />

    <TextView
        android:id="@+id/creator5"
        style="@style/appearance_medium_16"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/makarov"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/creator4" />
</androidx.constraintlayout.widget.ConstraintLayout>
