<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filtering.FilteringFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFiltering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/filtering_settings"
        app:titleTextAppearance="@style/appearance_medium_22" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/area"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:hint="@string/place_of_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarFiltering">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/areaEdit"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:clickable="false"
            tools:text="@string/country" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sector"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:hint="@string/branch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/area">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sectorEdit"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:clickable="false"
            tools:text="@string/country" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/salaryInput"
        style="@style/SalaryTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginVertical="@dimen/dp_24"
        android:background="@drawable/shape_corner_and_back_edit_text"
        android:hint="@string/expected_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/salaryEdit"
            style="@style/SalaryTextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:digits="0123456789"
            android:paddingBottom="@dimen/dp_8"
            android:focusable="false"
            android:enabled="true"
            android:text="@string/enter_the_amount"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/show_salary_text"
        style="@style/appearance_regular_16"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center_vertical"
        android:text="@string/do_not_show_without_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salaryInput" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/salaryCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/show_salary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/show_salary_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="91dp"
        android:layout_marginHorizontal="17dp"
        android:text="@string/apply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/drop"
        android:background="@color/transparent"
        android:textColor="@color/red"
        android:layout_width="0dp"
        android:layout_height="59dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="17dp"
        android:text="@string/drop" />

    <View
        android:id="@+id/area_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintTop_toTopOf="@id/area"
        app:layout_constraintBottom_toBottomOf="@id/area"
        app:layout_constraintStart_toStartOf="@id/area"
        app:layout_constraintEnd_toEndOf="@id/area" />

    <View
        android:id="@+id/sector_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintTop_toTopOf="@id/sector"
        app:layout_constraintBottom_toBottomOf="@id/sector"
        app:layout_constraintStart_toStartOf="@id/sector"
        app:layout_constraintEnd_toEndOf="@id/sector" />

    <View
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/show_salary_text"
        app:layout_constraintBottom_toBottomOf="@id/show_salary_text"
        app:layout_constraintStart_toStartOf="@id/show_salary_text"
        app:layout_constraintEnd_toEndOf="@id/show_salary_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
