<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.placework.PlaceWorkFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPlaceWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/choosing_a_place_of_work"
        app:titleTextAppearance="@style/appearance_medium_22" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/choiceCountry"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:hint="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarPlaceWork">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCountry"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:clickable="false"
            tools:text="@string/country" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/choiceRegion"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:hint="@string/region"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choiceCountry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRegion"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="@string/region" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/country_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintTop_toTopOf="@id/choiceCountry"
        app:layout_constraintBottom_toBottomOf="@id/choiceCountry"
        app:layout_constraintStart_toStartOf="@id/choiceCountry"
        app:layout_constraintEnd_toEndOf="@id/choiceCountry"/>

    <View
        android:id="@+id/region_navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintTop_toTopOf="@id/choiceRegion"
        app:layout_constraintBottom_toBottomOf="@id/choiceRegion"
        app:layout_constraintStart_toStartOf="@id/choiceRegion"
        app:layout_constraintEnd_toEndOf="@id/choiceRegion"/>

</androidx.constraintlayout.widget.ConstraintLayout>
